feat: use official font

--- a/f1_telemetry/webapp/index.html
+++ b/f1_telemetry/webapp/index.html
@@ -222,7 +222,7 @@
                 <div class="flex flex-grow max-h-48" id="track"></div>
             </div>
             <div class="p-1 text-center flex-col flex-grow-0">
-                <div class="p-1 text-center font-bold" id="lap-label">LAP</div>
+                <div class="p-1 text-center font-bold flex-grow w-96" id="lap-label">LAP</div>
                 <div class="flex-grow-0 flex-col">
                     <div class="flex-grow-0 text-5xl p-4 h-24" id="total-time"></div>
                     <div class="flex flex-grow-0 w-64 m-auto flex-row">
@@ -247,7 +247,7 @@
                     <svg xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 160 160" height="160" width="160">
                         <g>
                             <circle style="fill:none;stroke-width:12;" class="tyre-none" id="tyre-circle" cx="80" cy="80" r="48" />
-                            <text x="80" y="104" style="font-weight:bold;font-size:64px;font-family:sans-serif;fill:#fff;" id="tyre-label" text-anchor="middle"></text>
+                            <text class="tyre-label" x="80" y="98" id="tyre-label" text-anchor="middle"></text>
                         </g>
                     </svg>
                     <span id="tyre-age"></span>
