feat: add rival comparison in TT sessions

--- a/f1_telemetry/webapp/index.html
+++ b/f1_telemetry/webapp/index.html
@@ -19,7 +19,7 @@
             <!-- Sessions -->
             <div id="session" class="p-1 flex flex-col">
                 <div class="p-1 text-center font-bold">SESSIONS</div>
-                <div class="p-2 max-h-48 h-48 w-64 max-w-64 overflow-y-auto">
+                <div class="p-2 max-h-64 h-64 w-64 max-w-64 overflow-y-auto">
                     <ul class="text-sm" id="session_list"/>
                 </div>
             </div>
@@ -27,7 +27,7 @@
             <!-- Laps -->
             <div id="laps" class="p-1 flex flex-col">
                 <div class="p-1 text-center font-bold">LAPS</div>
-                <div class="p-2 max-h-48 h-48 w-24 max-w-24 overflow-y-auto">
+                <div class="p-2 max-h-64 h-64 w-24 max-w-24 overflow-y-auto">
                     <ul class="text-sm text-center" id="lap_list"/>
                 </div>
             </div>
@@ -40,7 +40,7 @@
                 <!-- Track -->
                 <div class="p-1 text-center flex flex-col min-w-48 w-48">
                     <div class="p-1 text-center font-bold">TRACK</div>
-                    <div class="flex flex-grow max-h-48" id="track"></div>
+                    <div class="flex flex-grow max-h-64" id="track"></div>
                 </div>
 
                 <!-- Lap timings -->
@@ -92,6 +92,7 @@
             <!-- LX -->
             <div class="flex flex-col flex-grow">
                 <div id="input" class="plot"></div>
+                <div id="gap" class="plot"></div>
                 <div id="speed" class="plot"></div>
                 <div id="gears" class="plot"></div>
             </div>
