feat: add rival steer lock data

--- a/f1_telemetry/webapp/index.html
+++ b/f1_telemetry/webapp/index.html
@@ -95,6 +95,7 @@
                 <div id="gap" class="plot"></div>
                 <div id="speed" class="plot"></div>
                 <div id="gears" class="plot"></div>
+                <div id="steer" class="plot"></div>
             </div>
             <!-- RX -->
             <div class="flex flex-col flex-grow">
