--- a/f1_telemetry/webapp/live.html
+++ b/f1_telemetry/webapp/live.html
@@ -536,7 +536,9 @@ from pathlib import Path; print(Path("f1_telemetry/webapp/art/car.svg").read_tex
       </div>
    </div>
 
-   <div id="live-trace" class="m-auto flex place-content-center w-min h-min p-8 bg-black bg-opacity-50 rounded-2xl my-8"></div>
+   <div id="live-trace" class="m-auto flex flex-col place-content-center w-min h-min p-8 bg-black bg-opacity-50 rounded-2xl my-8">
+      <div id="gap" class="m-auto" style="color:white">0.00</div>
+   </div>
 
    <script src="utils.js"></script>
    <script src="live.js"></script>
