feat: next session forecast

--- a/f1_telemetry/webapp/live.html
+++ b/f1_telemetry/webapp/live.html
@@ -52,22 +52,29 @@ from pathlib import Path; print(Path("f1_telemetry/webapp/art/car.svg").read_tex
 ]]] -->
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <svg
-   xmlns:dc="http://purl.org/dc/elements/1.1/"
-   xmlns:cc="http://creativecommons.org/ns#"
-   xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-   xmlns:svg="http://www.w3.org/2000/svg"
-   xmlns="http://www.w3.org/2000/svg"
-   xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
-   xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
    width="731.36432"
    height="383.21201"
    viewBox="0 0 193.50681 101.39151"
    version="1.1"
    id="svg8"
-   inkscape:version="1.0 (4035a4fb49, 2020-05-01)"
-   sodipodi:docname="car.svg">
+   inkscape:version="1.2.2 (b0a8486, 2022-12-01)"
+   sodipodi:docname="car.svg"
+   xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
+   xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
+   xmlns="http://www.w3.org/2000/svg"
+   xmlns:svg="http://www.w3.org/2000/svg"
+   xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+   xmlns:cc="http://creativecommons.org/ns#"
+   xmlns:dc="http://purl.org/dc/elements/1.1/">
   <defs
-     id="defs2" />
+     id="defs2">
+    <rect
+       x="344.37311"
+       y="338.22359"
+       width="43.925142"
+       height="28.990594"
+       id="rect555" />
+  </defs>
   <sodipodi:namedview
      fit-margin-bottom="0"
      fit-margin-right="0"
@@ -79,19 +86,22 @@ from pathlib import Path; print(Path("f1_telemetry/webapp/art/car.svg").read_tex
      borderopacity="1.0"
      inkscape:pageopacity="0.0"
      inkscape:pageshadow="2"
-     inkscape:zoom="1.979899"
-     inkscape:cx="414.76402"
-     inkscape:cy="208.91252"
+     inkscape:zoom="1.3075636"
+     inkscape:cx="427.51266"
+     inkscape:cy="169.39902"
      inkscape:document-units="mm"
      inkscape:current-layer="layer1"
      inkscape:document-rotation="0"
      showgrid="false"
-     inkscape:window-width="2560"
-     inkscape:window-height="1417"
-     inkscape:window-x="-8"
-     inkscape:window-y="379"
-     inkscape:window-maximized="1"
-     units="px" />
+     inkscape:window-width="1300"
+     inkscape:window-height="843"
+     inkscape:window-x="0"
+     inkscape:window-y="25"
+     inkscape:window-maximized="0"
+     units="px"
+     inkscape:showpageshadow="2"
+     inkscape:pagecheckerboard="0"
+     inkscape:deskcolor="#d1d1d1" />
   <metadata
      id="metadata5">
     <rdf:RDF>
@@ -100,7 +110,7 @@ from pathlib import Path; print(Path("f1_telemetry/webapp/art/car.svg").read_tex
         <dc:format>image/svg+xml</dc:format>
         <dc:type
            rdf:resource="http://purl.org/dc/dcmitype/StillImage" />
-        <dc:title></dc:title>
+        <dc:title />
       </cc:Work>
     </rdf:RDF>
   </metadata>
@@ -315,27 +325,27 @@ from pathlib import Path; print(Path("f1_telemetry/webapp/art/car.svg").read_tex
        xml:space="preserve"
        style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:12.7px;line-height:1.25;font-family:F1;-inkscape-font-specification:F1;text-align:center;text-anchor:middle;fill:#e5e5e5;fill-opacity:1;stroke:none;stroke-width:0.264583"
        x="169.73819"
-       y="50.275448"
+       y="47.629612"
        id="weather"><tspan
          sodipodi:role="line"
          x="169.73819"
-         y="50.275448"
+         y="47.629612"
          style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:12.7px;font-family:F1;-inkscape-font-specification:F1;text-align:center;text-anchor:middle;fill:#e5e5e5;fill-opacity:1;stroke-width:0.264583"
          id="weather-icon">O</tspan><tspan
          sodipodi:role="line"
          x="169.73819"
-         y="66.150444"
+         y="63.504612"
          style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:8.46667px;font-family:F1;-inkscape-font-specification:F1;text-align:center;text-anchor:middle;fill:#e5e5e5;fill-opacity:1;stroke-width:0.264583"
          id="weather-cond">awaiting data ...</tspan></text>
     <g
-       id="forecast"
-       transform="translate(0,8.4666671)">
+       id="forecast">
       <text
          id="forecast1"
          y="80.972778"
          x="124.71702"
          style="font-style:normal;font-weight:normal;font-size:10.5833px;line-height:0;font-family:sans-serif;fill:#000000;fill-opacity:1;stroke:none;stroke-width:0.264583"
-         xml:space="preserve"><tspan
+         xml:space="preserve"
+         transform="translate(-6.0416666e-7,-2.1166664)"><tspan
            y="80.972778"
            x="124.71702"
            id="forecast1-icon"
@@ -371,7 +381,8 @@ from pathlib import Path; print(Path("f1_telemetry/webapp/art/car.svg").read_tex
          style="font-style:normal;font-weight:normal;font-size:10.5833px;line-height:0;font-family:sans-serif;fill:#000000;fill-opacity:1;stroke:none;stroke-width:0.264583"
          x="154.51134"
          y="80.983521"
-         id="forecast2"><tspan
+         id="forecast2"
+         transform="translate(-6.0416666e-7,-2.1166664)"><tspan
            style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;line-height:1;font-family:F1;-inkscape-font-specification:F1;text-align:center;text-anchor:middle;fill:#e5e5e5;fill-opacity:1;stroke-width:0.264583"
            sodipodi:role="line"
            id="forecast2-icon"
@@ -407,7 +418,8 @@ from pathlib import Path; print(Path("f1_telemetry/webapp/art/car.svg").read_tex
          y="80.454353"
          x="184.30565"
          style="font-style:normal;font-weight:normal;font-size:10.5833px;line-height:0;font-family:sans-serif;fill:#000000;fill-opacity:1;stroke:none;stroke-width:0.264583"
-         xml:space="preserve"><tspan
+         xml:space="preserve"
+         transform="translate(-6.0416666e-7,-2.1166664)"><tspan
            y="80.454353"
            x="184.30565"
            id="forecast3-icon"
@@ -443,7 +455,8 @@ from pathlib import Path; print(Path("f1_telemetry/webapp/art/car.svg").read_tex
          style="font-style:normal;font-weight:normal;font-size:10.5833px;line-height:0;font-family:sans-serif;fill:#000000;fill-opacity:1;stroke:none;stroke-width:0.264583"
          x="214.09998"
          y="80.454353"
-         id="forecast4"><tspan
+         id="forecast4"
+         transform="translate(-6.0416666e-7,-2.1166664)"><tspan
            style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;line-height:1;font-family:F1;-inkscape-font-specification:F1;text-align:center;text-anchor:middle;fill:#e5e5e5;fill-opacity:1;stroke-width:0.264583"
            sodipodi:role="line"
            id="forecast4-icon"
@@ -474,61 +487,105 @@ from pathlib import Path; print(Path("f1_telemetry/webapp/art/car.svg").read_tex
            y="122.48875"
            style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:4.93889px;line-height:1.25;font-family:F1;-inkscape-font-specification:F1;text-align:center;text-anchor:middle;fill:#e5e5e5;fill-opacity:1;stroke-width:0.264583"
            id="forecast4-offset">5m</tspan></text>
+      <path
+         sodipodi:type="star"
+         style="fill:#37c837;fill-opacity:1;stroke-width:0.529167"
+         id="path1043"
+         sodipodi:sides="3"
+         sodipodi:cx="138.78166"
+         sodipodi:cy="101.3931"
+         sodipodi:r1="5.199749"
+         sodipodi:r2="2.5998745"
+         sodipodi:arg1="-2.0943951"
+         sodipodi:arg2="-1.0471976"
+         inkscape:flatsided="false"
+         inkscape:rounded="0"
+         inkscape:randomized="0"
+         d="m 136.18179,96.889982 3.89981,2.251557 3.89981,2.251561 -3.89981,2.25155 -3.89981,2.25156 0,-4.50311 z"
+         inkscape:transform-center-x="-0.47463466"
+         inkscape:transform-center-y="-1.7743668e-06"
+         transform="matrix(0.36512031,0,0,0.84078801,88.722545,10.479345)" />
+      <path
+         transform="matrix(0.36512031,0,0,0.84078801,118.48699,10.479345)"
+         inkscape:transform-center-y="-1.7743668e-06"
+         inkscape:transform-center-x="-0.47463466"
+         d="m 136.18179,96.889982 3.89981,2.251557 3.89981,2.251561 -3.89981,2.25155 -3.89981,2.25156 0,-4.50311 z"
+         inkscape:randomized="0"
+         inkscape:rounded="0"
+         inkscape:flatsided="false"
+         sodipodi:arg2="-1.0471976"
+         sodipodi:arg1="-2.0943951"
+         sodipodi:r2="2.5998745"
+         sodipodi:r1="5.199749"
+         sodipodi:cy="101.3931"
+         sodipodi:cx="138.78166"
+         sodipodi:sides="3"
+         id="path1045"
+         style="fill:#37c837;fill-opacity:1;stroke-width:0.529167"
+         sodipodi:type="star" />
+      <path
+         sodipodi:type="star"
+         style="fill:#37c837;fill-opacity:1;stroke-width:0.529167"
+         id="path1047"
+         sodipodi:sides="3"
+         sodipodi:cx="138.78166"
+         sodipodi:cy="101.3931"
+         sodipodi:r1="5.199749"
+         sodipodi:r2="2.5998745"
+         sodipodi:arg1="-2.0943951"
+         sodipodi:arg2="-1.0471976"
+         inkscape:flatsided="false"
+         inkscape:rounded="0"
+         inkscape:randomized="0"
+         d="m 136.18179,96.889982 3.89981,2.251557 3.89981,2.251561 -3.89981,2.25155 -3.89981,2.25156 0,-4.50311 z"
+         inkscape:transform-center-x="-0.47463466"
+         inkscape:transform-center-y="-1.7743668e-06"
+         transform="matrix(0.36512031,0,0,0.84078801,148.25145,10.479345)" />
     </g>
-    <path
-       sodipodi:type="star"
-       style="fill:#37c837;fill-opacity:1;stroke-width:0.529167"
-       id="path1043"
-       sodipodi:sides="3"
-       sodipodi:cx="138.78166"
-       sodipodi:cy="101.3931"
-       sodipodi:r1="5.199749"
-       sodipodi:r2="2.5998745"
-       sodipodi:arg1="-2.0943951"
-       sodipodi:arg2="-1.0471976"
-       inkscape:flatsided="false"
-       inkscape:rounded="0"
-       inkscape:randomized="0"
-       d="m 136.18179,96.889982 3.89981,2.251557 3.89981,2.251561 -3.89981,2.25155 -3.89981,2.25156 0,-4.50311 z"
-       inkscape:transform-center-x="-0.47463466"
-       inkscape:transform-center-y="-1.7743668e-06"
-       transform="matrix(0.36512031,0,0,0.84078801,88.722545,21.062685)" />
-    <path
-       transform="matrix(0.36512031,0,0,0.84078801,118.48699,21.062685)"
-       inkscape:transform-center-y="-1.7743668e-06"
-       inkscape:transform-center-x="-0.47463466"
-       d="m 136.18179,96.889982 3.89981,2.251557 3.89981,2.251561 -3.89981,2.25155 -3.89981,2.25156 0,-4.50311 z"
-       inkscape:randomized="0"
-       inkscape:rounded="0"
-       inkscape:flatsided="false"
-       sodipodi:arg2="-1.0471976"
-       sodipodi:arg1="-2.0943951"
-       sodipodi:r2="2.5998745"
-       sodipodi:r1="5.199749"
-       sodipodi:cy="101.3931"
-       sodipodi:cx="138.78166"
-       sodipodi:sides="3"
-       id="path1045"
-       style="fill:#37c837;fill-opacity:1;stroke-width:0.529167"
-       sodipodi:type="star" />
-    <path
-       sodipodi:type="star"
-       style="fill:#37c837;fill-opacity:1;stroke-width:0.529167"
-       id="path1047"
-       sodipodi:sides="3"
-       sodipodi:cx="138.78166"
-       sodipodi:cy="101.3931"
-       sodipodi:r1="5.199749"
-       sodipodi:r2="2.5998745"
-       sodipodi:arg1="-2.0943951"
-       sodipodi:arg2="-1.0471976"
-       inkscape:flatsided="false"
-       inkscape:rounded="0"
-       inkscape:randomized="0"
-       d="m 136.18179,96.889982 3.89981,2.251557 3.89981,2.251561 -3.89981,2.25155 -3.89981,2.25156 0,-4.50311 z"
-       inkscape:transform-center-x="-0.47463466"
-       inkscape:transform-center-y="-1.7743668e-06"
-       transform="matrix(0.36512031,0,0,0.84078801,148.25145,21.062685)" />
+    <text
+       xml:space="preserve"
+       style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:6.35px;line-height:1.25;font-family:F1;-inkscape-font-specification:F1;text-align:center;text-anchor:middle;fill:#e5e5e5;fill-opacity:1;stroke:none;stroke-width:0.264583"
+       x="124.28498"
+       y="132.86688"
+       id="nforecast1"><tspan
+         sodipodi:role="line"
+         x="124.28498"
+         y="132.86688"
+         style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:6.35px;font-family:F1;-inkscape-font-specification:F1;text-align:center;text-anchor:middle;fill:#e5e5e5;fill-opacity:1;stroke-width:0.264583"
+         id="weather-cond-5">O</tspan></text>
+    <text
+       xml:space="preserve"
+       style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:6.35px;line-height:1.25;font-family:F1;-inkscape-font-specification:F1;text-align:center;text-anchor:middle;fill:#e5e5e5;fill-opacity:1;stroke:none;stroke-width:0.264583"
+       x="153.91797"
+       y="132.86688"
+       id="nforecast2"><tspan
+         sodipodi:role="line"
+         x="153.91797"
+         y="132.86688"
+         style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:6.35px;font-family:F1;-inkscape-font-specification:F1;text-align:center;text-anchor:middle;fill:#e5e5e5;fill-opacity:1;stroke-width:0.264583"
+         id="tspan593">O</tspan></text>
+    <text
+       xml:space="preserve"
+       style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:6.35px;line-height:1.25;font-family:F1;-inkscape-font-specification:F1;text-align:center;text-anchor:middle;fill:#e5e5e5;fill-opacity:1;stroke:none;stroke-width:0.264583"
+       x="183.55092"
+       y="132.86688"
+       id="nforecast3"><tspan
+         sodipodi:role="line"
+         x="183.55092"
+         y="132.86688"
+         style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:6.35px;font-family:F1;-inkscape-font-specification:F1;text-align:center;text-anchor:middle;fill:#e5e5e5;fill-opacity:1;stroke-width:0.264583"
+         id="tspan597">O</tspan></text>
+    <text
+       xml:space="preserve"
+       style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:6.35px;line-height:1.25;font-family:F1;-inkscape-font-specification:F1;text-align:center;text-anchor:middle;fill:#e5e5e5;fill-opacity:1;stroke:none;stroke-width:0.264583"
+       x="213.71301"
+       y="132.86688"
+       id="nforecast4"><tspan
+         sodipodi:role="line"
+         x="213.71301"
+         y="132.86688"
+         style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:6.35px;font-family:F1;-inkscape-font-specification:F1;text-align:center;text-anchor:middle;fill:#e5e5e5;fill-opacity:1;stroke-width:0.264583"
+         id="tspan601">O</tspan></text>
   </g>
 </svg>
 
