feat: live speed trace

--- a/f1_telemetry/webapp/live.html
+++ b/f1_telemetry/webapp/live.html
@@ -12,13 +12,19 @@
       .throttleLine {
         fill: none;
         stroke: #00dd00;
-        stroke-width: 6px;
+        stroke-width: 4px;
       }
     
       .brakeLine {
         fill: none;
         stroke: #dd0000;
-        stroke-width: 6px;
+        stroke-width: 4px;
+      }
+
+      .speedLine {
+         fill: none;
+         stroke: #dda900;
+         stroke-width: 2px;
       }
     
       .rivalThrottleLine {
@@ -31,6 +37,12 @@
         fill: none;
         stroke: #ffa0a0;
         stroke-width: 2px;
+      }
+
+      .rivalSpeedLine {
+         fill: none;
+         stroke: #ffdaa0;
+         stroke-width: 1px;
       }
     </style>
 </head>
